# fastmcp-mysql

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt  server.py
.github/workflows/: test.yml
tests/: test_security.py  test_server.py
