[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fastmcp-mysql"
version = "0.1.0"
description = "基于 FastMCP 的 MySQL MCP 服务 — 默认只读，可配置开启写操作"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "fastmcp-mysql contributors" },
]
keywords = ["mcp", "mysql", "fastmcp", "database", "ai-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

dependencies = [
    "fastmcp>=2.0",
    "aiomysql>=0.2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/dongweitao/fastmcp-mysql"
Repository = "https://github.com/dongweitao/fastmcp-mysql"
Issues = "https://github.com/dongweitao/fastmcp-mysql/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
